--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="modal-content">
       <div class="form-container">
         <h2 class="form-heading">Shaurya IIT Kharagpur 2023 Form</h2>
-        <img class="logo" src="URL_OF_LOGO" alt="Logo">
+        <img class="logo" src=shaurya.png alt="Logo">
         <form id="signupForm">
           <label for="name">Name</label>
           <input type="text" id="name" required>
